ViewMode- grid view issues with overflow

--- a/ViewModeSwitch/css/styles.css
+++ b/ViewModeSwitch/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Lato', Calibri, Arial, sans-serif;
-  color: #47A3DA
+  color: #47A3DA;
 }
 .clearfix, .main { /* margins & padding for header & div.main */
   margin-left: auto;
@@ -19,9 +19,49 @@ header > h1 {
 header > nav {
   float: right;
 }
+#cbp-vm {
+  border: solid #47A3DA;
+}
+.cbp-vm-options {
+  float: right;
+}
+ul > li {
+  float: left;
+  width: 33%;
+  list-style-type: none;
+  text-align: center;
+}
+.main::after {
+  content: "";
+  display: table;
+  clear: both;
+  overflow: hidden;
+}
+*, *::after, *::before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+}
+li {
+  padding-right: 20px;
+}
+li:last-of-type {
+  padding-right: 0;
+}
+.main {
+  padding: 0 30px 50px 30px;
+}
+/*.grid-pad > li:last-of-type {
+  padding-right: 20px;
+}*/
+
+
+
 
 [class*='column-'] { /* selects all columns and makes them next to eachother */
-  float: left;
+  /*float: left;*/
   width: 33%;
 }
 
